--- a/app/views/orchestras/index.html.erb
+++ b/app/views/orchestras/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All orchestras</h1>
 <% @orchestras.each do |orchestra| %>
-  <h3><%= orchestra.name %> </h3>
-  <h2><a href="/orchestras/<%= orchestra.id %>"><%= orchestra.name %></a></h2>
+  <h2><%= orchestra.name %> </h2>
+  <h3><a href="/orchestras/<%= orchestra.id %>"><%= orchestra.name %></a> created at:<%=orchestra.created_at%></h3>
   <p><%= link_to "Orchestra Information", "orchestra/#{orchestra.id}"%></p>
 <% end %>
 <%# @orchestras.each do |orchestra| %>
