Adds create orchestra, and some partial functions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,8 @@
 
   <body>
     <%= yield %>
-  </body>
+  </body><br/>
+  
+  <%= button_to "Musician Index", "/musicians", method: :get %>
+  <%= button_to "Orchestra Index", "/orchestras", method: :get %>
 </html>
