--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Musicians</h1>
-<% @musicians.each do |musician| %>
+<h1>All Musicians on call</h1>
+<% @on_call_musicians.each do |musician| %>
   <h2><a href="/musicians/<%= musician.id %>"><%= musician.name %></a></h2>
 <% end %>
