--- a/app/views/orchestras/edit.html.erb
+++ b/app/views/orchestras/edit.html.erb
@@ -1,6 +1,6 @@
-<form action="/orchestras" method="post">
+<form action="/orchestras" method="patch">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <p>Enter a new orchestra:</p>
+  <p>Enter information for <%= @current_group.name%></p>
   <p>name:</p><input type='text' name='orchestra[name]'/><br/>
   <p>chairs:</p><input type='number' name='orchestra[chairs]'/><br/>
   <p>conductor:</p><input type='text' name='orchestra[conductor]'/><br/>
